projects/site/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  labels:
    app: site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: site
        image: localhost:5000/site:local
        ports:
        - containerPort: 80
