projects/site/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: site
spec:
  selector:
    app: site
  ports:
  - port: 80
